<resources>
    <string name="app_name">Capture Interface</string>
    <string name="collect_folder" translatable="false">CaptureInterface</string>
    <string name="xposed_desc">As the name suggests, this is an application that helps collect interface information.</string>
    <string name="module_version">Module version: %1$s</string>
    <string name="module_not_activated">Module not activated</string>
    <string name="module_is_activated">Module is activated</string>
    <string name="accessibility_service_label">Capture Interface</string>
    <string name="accessibility_service_description">Using this service allows the application to collect the interface control tree of the APP and obtain the results of interface collection performed by accessibility.</string>
    <string name="screen_service_label">Capture Interface</string>
    <string name="screen_service_description">Collect real-time screenshots…</string>
    <string name="service_name">Floating action button</string>
    <string name="floating_button_iv_first">Start collecting</string>
    <string name="floating_button_iv_second">Continue to collect</string>
    <string name="working_mode">Work mode</string>
    <string name="use_lsp">Inject by LSP</string>
    <string name="use_lsp_summary_on">Switch on to use LSP inject mode</string>
    <string name="use_lsp_summary_off">Switch off to use normal mode, and requires manual piling</string>
    <string name="use_cmd">Use CMD</string>
    <string name="use_cmd_summary">Use cmd to simplify operations, such as obtaining runtime permissions</string>
    <string name="settings">Setting</string>
    <string name="collect_result">Collect result</string>
    <string name="collect_detail">Collect detail</string>
    <string name="more">More</string>
    <string name="save">Save</string>
    <string name="save_succeed">Save successfully</string>
    <string name="save_failed">Save failed</string>
    <string name="error">Error</string>
    <string name="data_changed">Data Changed</string>
    <string name="data_changed_desc">Do you want to save the file?</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="do_not_save">Do not save</string>
    <string name="edit_json">Edit Json</string>
    <string name="refresh_list">Refresh list</string>
    <string name="system_ui">UI Settings</string>
    <string name="sync_data">Sync Settings</string>
    <string name="switch_theme">Switch theme</string>
    <string name="ui_language">UI language</string>
    <string name="restart_sys">Restart system</string>
    <string name="restart_app">Restart application</string>
    <string name="github" translatable="false">Github</string>
    <string name="help">Help</string>
    <string name="select_app">Select an app</string>
    <string name="clear_select">Clear Selection</string>
    <string name="start_collect">Start collection</string>
    <string name="open_app">Open the app</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="select_app_desc">Select an app, and collect it\'s interface information</string>
    <string name="check_data">Collect results</string>
    <string name="check_data_desc">Click here to view the collection results</string>
    <string name="success_stop_app">The application was stopped</string>
    <string name="failure_stop_app">Application stop failure</string>
    <string name="success_start_app">The application was started</string>
    <string name="failure_start_app">Application start failure</string>
    <string name="success_restart_app">The application was restarted</string>
    <string name="failure_restart_app">Application restart failure</string>
    <string name="success_allow_SYSTEM_ALERT_WINDOW_permission">The SYSTEM_ALERT_WINDOW permission opened</string>
    <string name="failure_allow_SYSTEM_ALERT_WINDOW_permission">The SYSTEM_ALERT_WINDOW permission open failure</string>
    <string name="success_allow_accessibility_service">The accessibility service opened</string>
    <string name="failure_allow_accessibility_service">The accessibility service open failure</string>
    <string name="success_allow_PROJECT_MEDIA_permission">The PROJECT_MEDIA permission opened</string>
    <string name="failure_allow_PROJECT_MEDIA_permission">The PROJECT_MEDIA permission open failure</string>
    <string name="success_allow_ALLFILE_MANAGE_permission">The ALLFILE_MANAGE permission opened</string>
    <string name="failure_allow_ALLFILE_MANAGE_permission">The ALLFILE_MANAGE permission open failure</string>
    <string name="enable_module_LSP_scope">The LSP scope is enabled</string>
    <string name="enable_hook_by_LSP">Success hook by LSP</string>
    <string name="success_screen">Success screen capture</string>
    <string name="failure_screen">Failure screen capture</string>
    <string name="success_mkdir">Success create folder</string>
    <string name="failure_mkdir">Failure create folder</string>
    <string name="collect_time">Collect time</string>
    <string name="accessibility_collects">Accessibility collects: %1$1s</string>
    <string name="sdk_collects">SDK collects: %1$1s</string>
    <string name="app_info">App info</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="select_invert">Select Invert</string>
    <string name="switch_app">Switch app</string>
    <string name="page_copies">%1$s copies</string>
    <string name="app_infos">%1$1s ( %2$1s )</string>
    <string name="load_data_title">Loading data</string>
    <string name="load_data_desc">Please wait…</string>
    <string name="processing_title">Being Processed</string>
    <string name="processing_desc">Please wait…</string>
    <string name="search_app">Search app</string>
    <string name="export_data">Export data</string>
    <string name="data_exported">Data exported</string>
    <string name="data_deleted">Data deleted</string>
    <string name="data_loaded">Data loaded</string>
    <string name="select_num">%1$1s items selected</string>
    <string name="app_title">Selected: %1$1s</string>
    <string name="app_desc">PkgName: %1$1s</string>
    <string name="error_package_name">PkgName error</string>
    <string name="service_not_enable">Service not enabled</string>
    <string name="normal_mode">Normal mode</string>
    <string name="lsp_mode_inject">LSP injection</string>
    <string name="normal_mode_desc">The app running in normal mode</string>
    <string name="normal_mode_hint">In normal mode, do not need to select application</string>
    <string name="lsp_mode">LSP injection (%1$1s)</string>
    <string name="lsp_mode_desc">The app running in lsp injection mode</string>
    <string name="work_mode">Work mode</string>
    <string name="work_mode_desc">You need to select the working mode when you first open the application</string>
    <string name="grant_root">Grant the ROOT permission first</string>
    <string name="running_info">Running information</string>
    <string name="normal_running_desc">Normal mode, You need to inject and install the application manually. After clicking "Start Collection", it will return to the desktop and enter the pile application for collection.</string>
    <string name="lsp_off_running_desc">The LSP injection mode is enabled, but the module is not activated. The LSP scope has been loaded. The mobile phone may need to be restarted. </string>
    <string name="lsp_on_running_desc">LSP injection mode is activated. You need to select an application and click "Start Collection" to run the application and collect the application.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="reselect">Reselect</string>
    <string name="rename_file">Rename file</string>
    <string name="hint">Hint</string>
    <string name="hint_desc">If the LSP injection mode cannot work properly, you can enable LSPosed to check the status. Ensure that the scope of the module includes "System Framework (android)" and the APP to be tested, and click "Confirm" to enable LSPosed.</string>
    <string name="need_permission">Need permission</string>
    <string name="need_permission_desc">In order for the software to run properly, you need to grant the following permissions to use the application.</string>
    <string name="refresh">Refresh</string>
    <string name="need_all_permission">Please grant all permissions, and you can click "Refresh" to refresh the permission status</string>
    <string name="need_storage_permission">Viewing the collection results requires storage permission</string>
    <string name="need_storage_all_file_permission">Viewing the collection results requires storage permissions and all file permissions</string>
    <string name="grant_storage_permission">Please grant the application storage permission</string>
    <string name="grant_all_file_permission">Find "Capture Interface" and enable all file permission</string>
    <string name="grant_overlay_permission">Find "Capture Interface" and enable overlay permission</string>
    <string name="grant_accessibility_service">Find "Capture Interface" and enable accessibility service</string>
    <string name="app_version">Version: %1$1s</string>
    <string name="select_save_path">Select a save path</string>
    <string name="current">Current: </string>
    <string name="storage_permission">Storage permission</string>
    <string name="type">Type</string>
    <string name="num">Num</string>
    <string name="other">Other</string>
    <string name="selected">Selected</string>
    <string name="storage_permission_desc">Grant storage permission to store data for application interface collection</string>
    <string name="all_file_permission">All file permission</string>
    <string name="all_file_permission_desc">For Android 11 or later, you need to grant all file permission</string>
    <string name="overlay_permission">Overlay permission</string>
    <string name="overlay_permission_desc">Grant overlay permission to enable program function float Windows</string>
    <string name="accessibility_service">Accessibility service</string>
    <string name="accessibility_service_desc">Enable accessibility so that the program can use the barrier free function to obtain interface data </string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="sync_data_title">Synchronous data file</string>
    <string name="sync_data_desc">Database data may be lost after the application is reinstalled. In this case, you can synchronize local data files to the database.</string>
    <string name="follow_system">Follow system</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="data_error">Data error</string>
    <string name="data_error_desc">There are something wrong in collect \"%1$s\", in \"%2$s\", check \"Confirm\" to check files.</string>
    <string name="enter_correct_num">Please enter a correct number</string>
</resources>