<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/working_mode">

        <SwitchPreferenceCompat
            app:key="lsp_hook"
            app:enabled="true"
            app:summaryOn="@string/use_lsp_summary_off"
            app:summaryOff="@string/use_lsp_summary_on"
            app:title="@string/use_lsp" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/system_ui">

        <ListPreference
            app:defaultValue="follow_system"
            app:entries="@array/theme_titles"
            app:entryValues="@array/theme_values"
            app:key="theme_key"
            app:title="主题"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="follow_system"
            app:entries="@array/language_titles"
            app:entryValues="@array/language_values"
            app:key="language_key"
            app:title="语言"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_data">

        <Preference
            app:key="sync_data"
            android:title="同步数据文件"
            android:summary="应用重装后可能导致数据库数据丢失，此时可以同步本地数据文件至数据库" />

    </PreferenceCategory>


</PreferenceScreen>