<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_storage_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_ripple_r8"
                    android:padding="8dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/secondTextColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/storage_permission"
                            android:textSize="16sp" />

                        <TextView
                            android:textColor="@color/thirdTextColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/storage_permission_desc"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_storage_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check_permission_no" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_all_file_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_ripple_r8"
                    android:padding="8dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/secondTextColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all_file_permission"
                            android:textSize="16sp" />

                        <TextView
                            android:textColor="@color/thirdTextColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all_file_permission_desc"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_all_file_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check_permission_no" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_overlay_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_ripple_r8"
                    android:padding="8dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/secondTextColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/overlay_permission"
                            android:textSize="16sp" />

                        <TextView
                            android:textColor="@color/thirdTextColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/overlay_permission_desc"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_overlay_permission"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check_permission_no" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_access_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_ripple_r8"
                    android:padding="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/secondTextColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/accessibility_service"
                            android:textSize="16sp" />

                        <TextView
                            android:textColor="@color/thirdTextColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/accessibility_service_desc"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_access_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check_permission_no" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bt_permission_check_data"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:background="@drawable/bg_ripple_r36"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimaryAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/collect_result"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/bt_permission_refresh"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:background="@drawable/bg_ripple_r36"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimaryAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh"/>

                <TextView
                    android:id="@+id/bt_permission_confirm"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:clickable="true"
                    android:background="@drawable/bg_ripple_r36"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimaryAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>
