<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_float_window"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_save_path"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current"/>

                <TextView
                    android:id="@+id/tv_current_location"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingStart="0dp"
                    android:paddingEnd="16dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryAccent"
                    android:maxEms="14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/bt_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_failure_black"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/select_location_list_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bt_switch_app"
            android:textStyle="bold"
            android:clickable="true"
            android:background="@drawable/bg_ripple_r36"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_app"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/bt_refresh"
            android:textStyle="bold"
            android:clickable="true"
            android:background="@drawable/bg_ripple_r36"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_list"/>


    </LinearLayout>

</LinearLayout>

