<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:textColor="@color/secondTextColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/selected"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_file_uri"
                android:textColor="@color/secondTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:textColor="@color/secondTextColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/sp_rename_type"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/rename_type" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:textColor="@color/secondTextColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/num"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_rename_num"
                    android:inputType="number"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
